--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,12 @@ jobs:
     - name: Build and package with Maven
       run: mvn clean package
 
+      - name: Verify Vercel Authentication
+        run: vercel whoami
+        env:
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+
+
     - name: Deploy to Vercel
       run: vercel --prod --yes
       env:
